[gd_scene load_steps=8 format=2]

[ext_resource path="res://Guard.gd" type="Script" id=1]
[ext_resource path="res://assets/art_assets/spritesheet_characters.png" type="Texture" id=2]
[ext_resource path="res://Healthbar.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 166, 44, 46, 43 )

[sub_resource type="CircleShape2D" id=2]
radius = 22.1973

[sub_resource type="CircleShape2D" id=3]
radius = 1733.0

[sub_resource type="Animation" id=4]
resource_name = "damage"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Guard" type="KinematicBody2D" groups=[
"enemies",
"guards",
]]
collision_layer = 16
collision_mask = 71
script = ExtResource( 1 )
max_health = 500.0

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5.89921, 0.825895 )
shape = SubResource( 2 )

[node name="PlayerVisible" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerVisible"]
shape = SubResource( 3 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 35.7503, 9.29191 )

[node name="ShootCooldown" type="Timer" parent="."]
one_shot = true

[node name="PlayerSeen" type="Label" parent="."]
visible = false
margin_left = -41.0463
margin_top = 27.6979
margin_right = 32.9537
margin_bottom = 41.6979
text = "PlayerSeen:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EffectsAnimation" type="AnimationPlayer" parent="."]
anims/damage = SubResource( 4 )

[node name="NoRotate" type="Node" parent="."]

[node name="Healthbar" parent="NoRotate" instance=ExtResource( 3 )]
[connection signal="health_updated" from="." to="." method="_on_Guard_health_updated"]
[connection signal="body_entered" from="PlayerVisible" to="." method="_on_PlayerVisible_body_entered"]
[connection signal="body_exited" from="PlayerVisible" to="." method="_on_PlayerVisible_body_exited"]
[connection signal="timeout" from="ShootCooldown" to="." method="_on_ShootCooldown_timeout"]
